--- a/v3/index.html
+++ b/v3/index.html
@@ -107,7 +107,7 @@
                             <div class="crs2z c8hla cun0l cljb8 ce61j cmqpv c85uq cqevc" data-aos="fade-up" data-aos-delay="200">
                                 <div>
                                     <a class="interact-button c4rfz cirl7 cyy7p cy9j6 cbjhp cvnv6 ceef4">
-                                        Bind assets
+                                        Bind Assets
                                     </a>
                                 </div>
                                 <div>
